msm8996-common: overlay: Define config_customDozePackage
* Remove lineage leftovers

Change-Id: Ia06632902fa57a93ad690882295b25a84f868c2d

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -32,4 +32,6 @@
          a fixed set of led colors -->
     <bool name="config_has_multi_color_led">false</bool>
 
+    <!-- Device specific doze package -->
+    <string name="config_customDozePackage">org.lineageos.settings.doze/org.lineageos.settings.doze.DozeSettingsActivity</string>
 </resources>
